fixed window height overflow

--- a/src/components/TerminalWindow.css
+++ b/src/components/TerminalWindow.css
@@ -1,13 +1,23 @@
 .terminal-window {
-    height: 100%;
     padding-left: 5px;
     padding-right: 5px;
     padding-bottom: 5px;
     margin: auto;
     width: 100%;
-    max-width: 1100px;
-    max-height: 500px;
+    max-width: 1200px;
+    max-height: 100%;
     border-radius: 5px;
+    display: flex;
+    flex-flow: column;
+}
+
+.terminal-window-bounds {
+    height: 95%;
+    width: 98%;
+    margin-left: 1%;
+    margin-right: 1%;
+    margin-top: 1%;
+    margin-bottom: 4%;
 }
 
 .terminal-window-color {
@@ -28,4 +38,8 @@
 .menu-button:hover {
     background-color: rgb(57, 172, 218);
     cursor: default;
+}
+
+.window-shadow {
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.5) !important;
 }
